--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
-  "homepage": "https://github.com/ivanlougan/cat_Shop/",
+  "homepage": "https://ivanlougan.github.io/cat_Shop/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
